<?xml version="1.0"?>
<package>
  <name>navigation_test_camera</name>
  <version>1.0.0</version>
  <description>navigation_test_camera</description>

  <maintainer email="uhr-se@ipa.fraunhofer.de">Simon Ebner</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navigation_test_helper</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>navigation_test_helper</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  
  </export>
</package>
