<?xml version="1.0"?>
<package>
  <name>navigation_test_collision_detection</name>
  <version>1.0.0</version>
  <description>The navigation_test_collision_detection package</description>

  <maintainer email="uhr-se@ipa.fraunhofer.de">Simon Ebner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>navigation_test_helper</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <build_depend>message_generation</build_depend>
  
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>navigation_test_helper</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  
  <run_depend>message_runtime</run_depend>

  <export>
    
  </export>
</package>
