<?xml version="1.0"?>
<package>
  <name>navigation_test_debug</name>
  <version>0.0.0</version>
  <description>The navigation_test_debug package</description>

  <maintainer email="uhr-se@ipa.fraunhofer.de">Simon Ebner</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>navigation_test_collision_detection</build_depend>
  <build_depend>navigation_test_prepare_robot</build_depend>
  <build_depend>navigation_test_skeleton</build_depend>

  <run_depend>navigation_test_collision_detection</run_depend>
  <run_depend>navigation_test_prepare_robot</run_depend>
  <run_depend>navigation_test_skeleton</run_depend>

  <export>

  </export>
</package>
