<?xml version="1.0"?>
<package>
  <name>navigation_test_analysis</name>
  <version>1.0.0</version>
  <description>This ROS-package analyzes bag files recorded by navigation_test</description>

  <maintainer email="uhr-se@ipa.fraunhofer.de">Simon Ebner</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>navigation_test_helper</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>navigation_test_helper</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
    
  </export>
</package>
